# gd-vst

./: .gitignore  CMakeLists.txt  README.md  about.md  mod.json
src/: active_plugin_manager.cpp  active_plugin_manager.hpp  help_icon.hpp  main.cpp  plugin_manager.cpp  plugin_manager.hpp  plugin_selector.cpp  plugin_selector.hpp  utils.hpp  window.cpp  window.hpp
